css/style.css
/* color scheme
bright green: #0ebd60
gray: cad1c9
dark green: 184c34
cream green: eff4ed
*/

/* Standard styles */
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: Roboto;
}

header {
    width: 100%;
    margin-bottom: 1.5rem;
}

main {
    display: flex;
    flex-grow: 1;
}

h1, h3{
    font: bold 1.5rem Handlee;
}

footer {
    color: #184c34;
    padding: .5rem;
}

/* div[class*="container"] {
    border: #000 solid 2px;
} */



/* Class/ID Styles */
.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    width: 100%;
}

.content-container {
    margin-bottom: 2.5rem;
    padding: 0.5rem;
}

.content-container:not(#actions-container) {
    border: #184c34 2px solid;
    border-radius: 10px;
    transition: transform 0.25s ease-in-out;
}

.content-container:not(#actions-container):hover {
    border-color: white;
    box-shadow: 0px 10px 10px #184c34;
    transform: scale(1.05);
}

#header-container {
    flex-direction: column;
    justify-content: space-center;
    align-content: center;
    padding: 0 0.75rem;

}

.logo-header {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.web-title {
    font: bold 2.5rem Handlee;
    color:#0ebd60;
    margin-bottom: 0.25rem;
}

.logo {
    max-width: 33px;
    object-fit: scale-down;
    padding-left: .5rem;
    padding-top: .75rem;
    transform: rotate(25deg);
    transition: transform .5s ease-in-out;
}

.logo:hover {
    transform: rotate(360deg);
}

.logo1 {
    display: none;
}

#nav-menu {
    list-style: none;
    margin-left: 0;
    padding-left: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    font-size: 1.15rem;
  }
  
  #nav-menu li {
    display: flex;
    justify-content: center;
    margin: 0.25rem;
    width: 100%;
  }
  
  #nav-menu li a {
    display: inline-block;
    padding: 1.05rem 1.15rem;
    text-decoration: none;
    text-align: center;
    width: 100%;
    color: #0ebd60;
  }

  #nav-menu li a:hover {
    background-color: #0ebd60;
    color: #eff4ed;
  }
  

#main-container {
    flex-direction: column;
    padding: .5rem;
}


.user-name {
    font-size: 2.5rem;
    align-self: center;
    margin: 0.75rem;
}

.section-title {
    display: block;
    width:100%;
    font-size: 1.5rem;
    padding-left: 0.75em;
    text-transform: uppercase;
    margin: 1.25rem 0 1rem 0;
}

#profile {
    flex-direction: row;
}

#profile-pic {
    border-radius: 5%;
    max-width: 250px;
}

#name-pic {
    display: flex;
    flex-direction: column;
}

#status {
    align-self: center;
    font-style: italic;
    font-size: 1.25rem;
    width: 35%;
}

#status h3 {
    margin-bottom: 0;
    padding: 0;
}

#actions-container ul {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
    list-style: none;
    font-size: 1.15rem;
}

#actions-container li {
    display: flex;
    align-items: center;
    font-family: Handlee;
    font-weight: bold;
    text-decoration: none;
    text-transform: uppercase;
    background-color: #0ebd60;
    color: #eff4ed;
    border-radius: 10px;
    padding: .75rem;
    margin: .25rem;
    text-align: center;
}

#actions-container li:hover {
    background-color: #184c34;
}

#stats-container h5 {
    font-size: 1.15rem;
    margin: 0.2rem;
    padding: 0.5rem;
}

#stats-container p {
    font-size: 1.05rem;
    text-align: justify;
    padding: 0 1.75rem;
    margin: .45rem .25rem;
}
.break {
    display:none;
}

#friends-container {
    padding: 0;
}

#friends-container figure {
    display: flex;
    flex-direction: column;
    padding: .25rem;
    margin: 0.5rem;
}

.friend-name {
    font-size: 1.05rem;
    text-align: center;
}

#pictures-container img {
    padding: .5rem;
    max-width: 200px;
}

#friends-container img {
    max-width:100px;
    border-radius: 100px;
}

/* Media Queries */

/* Laptop or desktop */
@media (min-width: 1000px) {
    /* make nav horizontal, keep pictures and friend pics to 3 per row */
      /* navigation menu */

    #header-container {
        flex-direction: row;
        width: 100%;
        justify-content: space-between;
        align-content: center;
        background-color: #0ebd60;
        color: #eff4ed;
    }

    header {
        max-height: 80px;
    }
    .web-title {
        color: #eff4ed;
    }

    .logo {
        padding-top: 0;
    }
    .logo1 {
        display: unset;
    }

    .logo2 {
        display: none;
    }

    #nav-menu {
        flex-direction: row;
        width: 100%;
    }

    #nav-menu li {
        width: unset;
    }
    
    #nav-menu li a:hover {
    background-color: #eff4ed;
    color: #184c34;
    }

    #nav-menu li a {
        width: 100%;
        color: #eff4ed;
    }

    #main-container {
        flex-direction: row;
    }
    
    #profile {
        width: 50%;
    }

    #profile-pic {
        max-width: 300px;
    }

    .media2 {
        width: 45%;
    }

    #stats-container {
        order: -1;
    }
    #stats-container h5 {
        text-align: center;
    }

    #actions-container {
        align-self: flex-start;
    }

    #actions-container ul {
        padding: 0.05rem;
        margin: 0;
        justify-content: space-evenly;
    }

    #actions-container li {
        padding: 1.2rem;
    }

    .break {
        display:block;
        width: 100%;
    }
    #friends-container img {
        max-width: 150px;
    }

    #pictures-container img {
        max-width:unset;
        padding: 1.25rem;
    } 
  }

@media (min-width: 750px) and (max-width: 999px){
    /* make stats and actions column with profile picture/name */

    #main-container {
        flex-direction: row;
    }
    #profile {
        width: 50%;
    }

    .media2 {
        width: 45%;
        flex-direction: column;
        flex-wrap: nowrap;
        justify-content: space-between;
    }

    #stats-container {
        order: -1;
    }
    #stats-container h5 {
        text-align: center;
    }

    #actions-container {
        align-self: flex-start;
    }

    #actions-container ul {
        padding: 0.05rem;
        margin: 0;
        justify-content: space-evenly;
    }
    #actions-container li {
        padding: 1rem;
    }

    .break {
        display: block;
        width:100%;
    }

    #friends-container figure {
        padding: 0; 
        padding-bottom: 1.75rem;
        margin:0;
    }

    #friends-container img {
        max-width: 150px;
    }

    #pictures-container img {
        max-width:unset;
        padding: 1.25rem;
    }

}

